Bug: 68501 - names in the conversation reading pane should be bubbles Checkpoint. Planning to add hovers for names in the header. Add a third option to how msg capsule view headers are displayed: full. Previously, there was just collapsed or expanded. Refactor code that gets address-related fields from the msg, since both capsule and regular msg view need it. Give the capsule header class a set() method that does the render, instead of the constructor and _setExpanded(). The HTML for each of the three states is cached. - remove duplicate addresses in the expanded header view
http://bugzilla.zimbra.com/show_bug.cgi?id=68501

Copied from Perforce
 Change: 347639

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -922,6 +922,10 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 	background-color:@SelC@;
 }
 
+.Conv2MsgHeader .LabelColName {
+	padding-left:5px;
+}
+
 .ZmMailMsgCapsuleView .Link {
 	cursor:pointer;
 	white-space:nowrap;
